--- a/lesson3/lesson3_3.ipynb
+++ b/lesson3/lesson3_3.ipynb
@@ -31,6 +31,49 @@
     "A=(a+b)*h/2\n",
     "print(f'top:{a}\\nbottom:{b}\\nheight:{h}\\nArea:{A}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r=2.0 A=6.2832\n"
+     ]
+    }
+   ],
+   "source": [
+    "# circle area\n",
+    "r=float(input('Please input a radii'))\n",
+    "A=3.1415962*r*r/2\n",
+    "print(f'r={r} A={A:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the opposite of a triangle = 10.0\n",
+      "the hypotenuse of a triangle = 20.0\n",
+      "the Degree = 30.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=float(input(\"Please input a opposite of a triangle: \"))\n",
+    "c=float(input(\"Please input a hypotenuse of a triangle: \"))\n",
+    "import math\n",
+    "D=math.degrees(math.asin(a/c))\n",
+    "print(f'the opposite of a triangle = {a}\\nthe hypotenuse of a triangle = {c}\\nthe Degree = {D:.4f}')"
+   ]
   }
  ],
  "metadata": {
