--- a/lesson5/leson5_1.ipynb
+++ b/lesson5/leson5_1.ipynb
@@ -21,8 +21,30 @@
     "        bonus=1000\n",
     "    else:bonus=500\n",
     "else:\n",
-    "    if math==100:bonus=500\n",
+    "    if M==100:bonus=500\n",
     "    else:bonus=0\n",
+    "print(f'bonus={bonus}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "C=int(input(\"Please give me your Chinese score : \"))\n",
+    "M=int(input(\"Please give me your Math score : \"))\n",
+    "if C==M==100:bonus=1000\n",
+    "elif C==100 or M==100: bonus=500\n",
+    "else:bonus=0\n",
     "print(f'bonus={bonus}')"
    ]
   },
@@ -36,6 +58,17 @@
     "#not:True False code space 對調\n",
     "if age>=18:print(\"You can get a drivers lisense\")\n",
     "else:(\"You can't get a drivers lisense\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P=int(input(\"Give me your BLood Pressure:\"))\n",
+    "if 120>=P>=90:print(\"Normal\")\n",
+    "else:print(\"Somethings wrong\")"
    ]
   }
  ],
