--- a/lesson5/lesson5_2.ipynb
+++ b/lesson5/lesson5_2.ipynb
@@ -123,10 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congratulation, the money is enough! 4months deposit=30939'\n"
+     ]
+    }
+   ],
+   "source": [
+    "deposit=0\n",
+    "month=0\n",
+    "while deposit<30000:\n",
+    "    month+=1\n",
+    "    money=int(input(f\"please give me {month}months deposit\"))\n",
+    "    deposit+=money\n",
+    "print(f\"Congratulation, the money is enough! {month}months deposit={deposit}'\")"
+   ]
   }
  ],
  "metadata": {
