--- a/lesson6/lesson6_0.ipynb
+++ b/lesson6/lesson6_0.ipynb
@@ -26,6 +26,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congratulation, the money is enough! 5months deposit=42245'\n"
+     ]
+    }
+   ],
+   "source": [
+    "deposit=0\n",
+    "month=0\n",
+    "while True: #無限迴圈 \n",
+    "    month+=1\n",
+    "    money=int(input(f\"please give me {month}months deposit\"))\n",
+    "    deposit+=money\n",
+    "    if deposit>=30000:break\n",
+    "print(f\"Congratulation, the money is enough! {month}months deposit={deposit}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
