--- a/lesson6/lesson6_0.ipynb
+++ b/lesson6/lesson6_0.ipynb
@@ -50,10 +50,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The game's over, BYE\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    a=input(\"please give me a english word (q=Esc)\")\n",
+    "    if a.upper()=='q'.upper():break\n",
+    "    print(a.capitalize())\n",
+    "print(\"The game's over, BYE\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
