--- a/lesson6/lesson6_0.ipynb
+++ b/lesson6/lesson6_0.ipynb
@@ -69,6 +69,84 @@
     "print(\"The game's over, BYE\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "81\n",
+      "8\n",
+      "BYE\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    a=input(\"please give me a number(int),you leave with'q'\")\n",
+    "    if a.upper()=='Q':break\n",
+    "    try:a=int(a)\n",
+    "    except:\n",
+    "        print(\"try again\")\n",
+    "        continue\n",
+    "    if a%2==0:print(a)\n",
+    "    else:print(a**2)\n",
+    "print('BYE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunny's BMI=19.11111111111111\n",
+      "Sunny's weight is tooo light\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:a,h,w=input(\"name:\"),input(\"height(m):\"),input(\"weight(kg):\")\n",
+    "    except:\n",
+    "        print(\"Fail! Plz try again\")\n",
+    "        continue\n",
+    "    B=eval(w)/(eval(h)**2)\n",
+    "    if B<18.5:b='tooo light'\n",
+    "    elif 24>B>=18.5:'normal'\n",
+    "    else :'tooo heavy'\n",
+    "    print(f\"{a}'s BMI={B}\\n{a}'s weight is {b}\")\n",
+    "    d=input(\"Do you want to continue?(y=yes,n=no)\")\n",
+    "    if d=='y':continue\n",
+    "    if d=='n':break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a=random.randint(1,11)\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
