--- a/lesson6/lesson6_0.ipynb
+++ b/lesson6/lesson6_0.ipynb
@@ -131,22 +131,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "2\n",
+      "-----A GUESSING NUM GAME------\n",
+      "smaller, you try 1 times\n",
+      "smaller, you try 2 times\n",
+      "Bingo!!!, you try 3 times\n",
+      "BYE\n"
      ]
     }
    ],
    "source": [
+    "#GUESS A NUMBER\n",
     "import random\n",
-    "a=random.randint(1,11)\n",
-    "print(a)"
+    "min=1\n",
+    "max=100\n",
+    "a=random.randint(min,max)\n",
+    "c=0\n",
+    "print(a)\n",
+    "print(\"-----A GUESSING NUM GAME------\")\n",
+    "while True:\n",
+    "    c+=1\n",
+    "    try:b=int(input(f\"Guess the number's range: {min}~{max}\"))\n",
+    "    except Exception:\n",
+    "        print(\"try again\")\n",
+    "        continue\n",
+    "    if b>=min and b<=max:\n",
+    "        if b==a:\n",
+    "            print(f\"Bingo!!!, you try {c} times\")\n",
+    "            break\n",
+    "        elif b>a:\n",
+    "            print(f'smaller, you try {c} times')\n",
+    "            max=b-1\n",
+    "        elif b>a:\n",
+    "            print(f'bigger, you try {c} times')\n",
+    "            min=b+1\n",
+    "    else:print(\"out of range\")\n",
+    "print(\"BYE\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
