--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -23,6 +23,51 @@
     "\n",
     "menu('gin','spaghetti','cake')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "('-----',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# *args---unlimited引數值呼叫\n",
+    "def print_args(*args):\n",
+    "    print(args)\n",
+    "print_args()\n",
+    "print_args(\"-----\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'a': '99'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# **kwargs---unlimited引數值名稱呼叫\n",
+    "def kwargs(**kwargs):\n",
+    "    print(kwargs)\n",
+    "\n",
+    "kwargs()\n",
+    "kwargs(a='99')"
+   ]
   }
  ],
  "metadata": {
