--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -68,6 +68,32 @@
     "kwargs()\n",
     "kwargs(a='99')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "{}\n",
+      "---------\n",
+      "(1, 2, 3, 4, 5)\n",
+      "{'Hi': '2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def all(*args,**kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)\n",
+    "all()\n",
+    "print(\"---------\")\n",
+    "all(1,2,3,4,5,Hi=\"2\")\n"
+   ]
   }
  ],
  "metadata": {
