--- a/LESSONS/lesson7/lesson7_3.ipynb
+++ b/LESSONS/lesson7/lesson7_3.ipynb
@@ -61,6 +61,30 @@
     "    print(code[key])\n",
     "    print(\"==============\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tw\n",
+      "taiwan\n",
+      "jp\n",
+      "Japan\n",
+      "hk\n",
+      "Hong kong\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in code.items():\n",
+    "    print(key)\n",
+    "    print(value)"
+   ]
   }
  ],
  "metadata": {
