--- a/LESSONS/lesson8/lesson8_0.ipynb
+++ b/LESSONS/lesson8/lesson8_0.ipynb
@@ -352,19 +352,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "299"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['朱彥志', '彭茹靖', '余宗儒', '吳俐芷', '臧怡君']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "student_names=random.choices(names,k=5)\n",
+    "student_names"
+   ]
   }
  ],
  "metadata": {
