--- a/LESSONS/lesson8/lesson8_3.ipynb
+++ b/LESSONS/lesson8/lesson8_3.ipynb
@@ -34,25 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_students(names:list[str])->list[dict]:\n",
     "    for name in names:\n",
-    "        print(name)\n",
+    "        #print(name)\n",
     "        chinese=random.randint(50,100)\n",
     "        English=random.randint(50,100)\n",
     "        Math=random.randint(50,100)\n",
-    "        print(chinese)\n",
-    "        print(English)\n",
-    "        print(Math)\n",
+    "        print({'name':name,'chinese':chinese,'english':English,'math':Math})\n",
     "        print(\"-----------\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -60,29 +58,19 @@
      "output_type": "stream",
      "text": [
       "鄭琇亞\n",
-      "87\n",
-      "51\n",
-      "71\n",
+      "{'name': '鄭琇亞', 'chinese': 99, 'english': 53, 'math': 76}\n",
       "-----------\n",
       "林建宏\n",
-      "87\n",
-      "100\n",
-      "66\n",
+      "{'name': '林建宏', 'chinese': 92, 'english': 83, 'math': 69}\n",
       "-----------\n",
       "馮淑芬\n",
-      "52\n",
-      "85\n",
-      "67\n",
+      "{'name': '馮淑芬', 'chinese': 55, 'english': 83, 'math': 83}\n",
       "-----------\n",
       "戚亨\n",
-      "82\n",
-      "72\n",
-      "72\n",
+      "{'name': '戚亨', 'chinese': 100, 'english': 90, 'math': 52}\n",
       "-----------\n",
       "朱士弘\n",
-      "70\n",
-      "95\n",
-      "60\n",
+      "{'name': '朱士弘', 'chinese': 64, 'english': 78, 'math': 75}\n",
       "-----------\n"
      ]
     }
