--- a/LESSONS/lesson8/lesson8_3.ipynb
+++ b/LESSONS/lesson8/lesson8_3.ipynb
@@ -34,49 +34,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_students(names:list[str])->list[dict]:\n",
+    "    students:list[dict]=[]\n",
     "    for name in names:\n",
     "        #print(name)\n",
     "        chinese=random.randint(50,100)\n",
     "        English=random.randint(50,100)\n",
     "        Math=random.randint(50,100)\n",
-    "        print({'name':name,'chinese':chinese,'english':English,'math':Math})\n",
-    "        print(\"-----------\")"
+    "        student={'name':name,'chinese':chinese,'english':English,'math':Math}\n",
+    "        students.append(student)\n",
+    "    return students"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "鄭琇亞\n",
-      "{'name': '鄭琇亞', 'chinese': 99, 'english': 53, 'math': 76}\n",
-      "-----------\n",
-      "林建宏\n",
-      "{'name': '林建宏', 'chinese': 92, 'english': 83, 'math': 69}\n",
-      "-----------\n",
-      "馮淑芬\n",
-      "{'name': '馮淑芬', 'chinese': 55, 'english': 83, 'math': 83}\n",
-      "-----------\n",
-      "戚亨\n",
-      "{'name': '戚亨', 'chinese': 100, 'english': 90, 'math': 52}\n",
-      "-----------\n",
-      "朱士弘\n",
-      "{'name': '朱士弘', 'chinese': 64, 'english': 78, 'math': 75}\n",
-      "-----------\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': '鄭琇亞', 'chinese': 55, 'english': 93, 'math': 56},\n",
+       " {'name': '林建宏', 'chinese': 86, 'english': 96, 'math': 87},\n",
+       " {'name': '馮淑芬', 'chinese': 64, 'english': 94, 'math': 81},\n",
+       " {'name': '戚亨', 'chinese': 75, 'english': 80, 'math': 63},\n",
+       " {'name': '朱士弘', 'chinese': 63, 'english': 93, 'math': 77}]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_students(names=students_names)"
+    "students=generate_students(names=students_names)\n",
+    "students\n"
    ]
   }
  ],
