--- a/LESSONS/lesson9/lesson9_2.ipynb
+++ b/LESSONS/lesson9/lesson9_2.ipynb
@@ -2,54 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person(object):\n",
-    "    pass"
+    "    def __init__(self):\n",
+    "        self.name='Sunny'   #attribute\n",
+    "        self.age=18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "__main__.Person"
+       "('Sunny', 18)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p1=Person()\n",
-    "type(p1)"
+    "p1.name,p1.age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "__main__.Person"
+       "('Sunny', 18)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p2:Person=Person()\n",
-    "type(p2)"
+    "p2.name,p2.age"
    ]
   }
  ],
