--- a/LESSONS/lesson9/lesson9_2.ipynb
+++ b/LESSONS/lesson9/lesson9_2.ipynb
@@ -53,6 +53,39 @@
     "p2:Person=Person()\n",
     "p2.name,p2.age"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person(object):\n",
+    "    def __init__(self,name:str,age:int):     #自訂初始化,參數\n",
+    "        self.name=name                       #建立attribute\n",
+    "        self.age=age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Sunny', 18)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1=Person(name=\"Sunny\",age=18)\n",
+    "p1.name,p1.age"
+   ]
   }
  ],
  "metadata": {
