--- a/LESSONS/lesson9/lesson9_2.ipynb
+++ b/LESSONS/lesson9/lesson9_2.ipynb
@@ -56,35 +56,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person(object):\n",
     "    def __init__(self,name:str,age:int):     #自訂初始化,參數\n",
     "        self.name=name                       #建立attribute\n",
-    "        self.age=age"
+    "        self.age=age\n",
+    "    \n",
+    "    def echo(self):\n",
+    "        print(f'My name is {self.name}')\n",
+    "        print(f'My age is {self.age}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('Sunny', 18)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Sunny\n",
+      "My age is 18\n"
+     ]
     }
    ],
    "source": [
     "p1=Person(name=\"Sunny\",age=18)\n",
-    "p1.name,p1.age"
+    "p1.echo()"
    ]
   }
  ],
