--- a/LESSONS/lesson9/lesson9_3.ipynb
+++ b/LESSONS/lesson9/lesson9_3.ipynb
@@ -43,6 +43,53 @@
     "s1:Student=Student(name='Sunny',age=18,score=100)\n",
     "s1.echo()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is QQ\n",
+      "My age is 11\n",
+      "My score is 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "s2:Student=Student(name='QQ',age=11,score=50)\n",
+    "s2.echo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Sunny\n",
+      "My age is 18\n",
+      "My score is 100\n",
+      "---------------------\n",
+      "My name is QQ\n",
+      "My age is 11\n",
+      "My score is 50\n",
+      "---------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "students:list[Student]=[s1,s2]\n",
+    "for student in students:\n",
+    "    student.echo()\n",
+    "    print(\"---------------------\")"
+   ]
   }
  ],
  "metadata": {
