--- a/LESSONS/lesson10/lesson10_1.ipynb
+++ b/LESSONS/lesson10/lesson10_1.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#讀+過濾\n",
     "import csv\n",
     "with open('個股日成交資訊.csv',encoding='utf-8',newline='') as file:\n",
     "    csv_dictR=csv.DictReader(file,['證券名稱', '成交股數', '成交金額', '漲跌價差', '成交筆數'],restkey='不要')\n",
@@ -38,7 +39,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#存成csv\n",
     "csv_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open('nem.csv',mode='w',encoding='utf-8',newline='') as file:\n",
+    "    csv_writter=csv.DictWriter(file,['證券名稱', '成交股數', '成交金額', '漲跌價差', '成交筆數'])\n",
+    "    csv_writter.writeheader()\n",
+    "    csv_writter.writerows(csv_list)"
    ]
   }
  ],
