--- a/LESSONS/lesson10/lesson10_03.ipynb
+++ b/LESSONS/lesson10/lesson10_03.ipynb
@@ -2,36 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tools\n",
     "from tools import BMI\n",
+    "from pprint import pprint\n",
     "import csv\n",
     "\n",
-    "if __name__=='__main__':\n",
-    "    nums=int(input(\"Gine me a num(<10): \"))\n",
+    "if __name__ == '__main__':\n",
+    "    nums = int(input('請輸入人數:'))\n",
     "    names:list[str]=tools.name_G(nums)\n",
     "    students:list[BMI]=tools.G_state(names)\n",
-    "    file_dict:list[dict]=[]\n",
+    "    file_dict:list[dict] = []\n",
     "    for student in students:\n",
-    "        student_dict={\n",
-    "        'Name':student.name,\n",
-    "        'Height(cm)':student.height,\n",
-    "        'Weight(kg)':student.weight,\n",
-    "        'BMI':student.get_BMI(),\n",
-    "        'State':student.get_status()\n",
-    "        }\n",
+    "        student_dict = {\n",
+    "        \"姓名\": student.name,\n",
+    "        \"身高\": student.height,\n",
+    "        \"體重\": student.weight,\n",
+    "        \"BMI\": student.get_BMI(),\n",
+    "        \"狀態\": student.get_status()\n",
+    "        } \n",
     "        file_dict.append(student_dict)\n",
-    "\n",
-    "    with open('bmi.csv',mode='w+',encoding='utf-8',newline='')as file:\n",
-    "        dict_writer=csv.DictWriter(file,['Name','Height(cm)','Weight(kg)','BMI','State'])\n",
+    "    \n",
+    "    with open('bmi.csv',mode='w+',encoding='utf-8',newline=\"\") as file:\n",
+    "        dict_writer = csv.DictWriter(file,['姓名',\"身高\",'體重','BMI','狀態'])\n",
     "        dict_writer.writeheader()\n",
-    "        dict_writer.writerows(file_dict)\n",
-    "\n",
-    "\n",
-    "\n"
+    "        dict_writer.writerows(file_dict)"
    ]
   }
  ],
