--- a/LESSONS/lesson10/lesson10_4.ipynb
+++ b/LESSONS/lesson10/lesson10_4.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1045,6 +1045,18 @@
     "for site in datas:\n",
     "    del site['NO']\n",
     "    print(site)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('aqi.csv',mode='w',encoding='utf-8',newline='') as file:\n",
+    "    dict_writer=csv.DictWriter(file,fieldnames=['sitename','county','aqi','status','pm2.5','datacreationdate','longigude'])\n",
+    "    dict_writer.writeheader()\n",
+    "    dict_writer.writerows(datas)\n"
    ]
   }
  ],
