--- a/LESSONS/lesson11/lesson11_1.ipynb
+++ b/LESSONS/lesson11/lesson11_1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "connect failHTTPSConnectionPool(host='moenv.gov.tw', port=443): Max retries exceeded with url: /api/v2/aqx_p_488?api_key=221974dd-667c-4243-b308-61b60bc29986&limit=1000&sort=datacreationdate%20desc&format=CSV (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x75ba44199db0>: Failed to resolve 'moenv.gov.tw' ([Errno -5] No address associated with hostname)\"))\n"
+      "Download Successfully\n"
      ]
     }
    ],
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully connect and download\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from requests import Response\n",
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -25062,12 +25070,14 @@
    "source": [
     "import io\n",
     "import csv\n",
+    "from csv import DictReader\n",
     "from pprint import pprint\n",
     "\n",
     "all_words:str=r.text\n",
     "file=io.StringIO(all_words)\n",
-    "all_data:list[dict]=list(csv.DictReader(file))\n",
-    "pprint(all_data)\n"
+    "dictReader:DictReader=list(csv.DictReader(file))\n",
+    "temp:list[dict]=list(dictReader)\n",
+    "pprint(temp)\n"
    ]
   }
  ],
