--- a/LESSONS/lesson12/lesson12_0.ipynb
+++ b/LESSONS/lesson12/lesson12_0.ipynb
@@ -128,6 +128,50 @@
     "print(letters[:6])\n",
     "print(letters[-6:])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hi Sunny!!!'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name='Sunny'\n",
+    "f'Hi {name}!!!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunny\\n\\tChu\n",
+      "Sunny\n",
+      "\tChu\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_words=r'Sunny\\n\\tChu'\n",
+    "print(raw_words)\n",
+    "\n",
+    "words='Sunny\\n\\tChu'\n",
+    "print(words)"
+   ]
   }
  ],
  "metadata": {
