--- a/LESSONS/lesson12/lesson12_01.ipynb
+++ b/LESSONS/lesson12/lesson12_01.ipynb
@@ -2,26 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0909090909\n"
+      "format wrong\n"
      ]
     }
    ],
    "source": [
     "def is_Ph_num(text:str)->bool:\n",
-    "    return True\n",
+    "    if len(text)!=12:\n",
+    "        return False\n",
+    "    elif not text[:4].isdecimal():\n",
+    "        return False\n",
+    "    elif text[4]!='-':\n",
+    "        return False\n",
+    "    elif not text[5:8].isdecimal():\n",
+    "        return False\n",
+    "    elif text[8]!='-':\n",
+    "        return False\n",
+    "    elif not text[9:].isdecimal():\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
     "\n",
     "Ph_num=input(\"Phone number:\")\n",
     "if is_Ph_num(Ph_num):\n",
-    "    print(f'Your num is {Ph_num}')\n",
+    "    print(f'Your phone num is {Ph_num}')\n",
     "else:\n",
-    "    print('num wrong format')"
+    "    print('format wrong')"
    ]
   }
  ],
