--- a/LESSONS/lesson12/lesson12_01.ipynb
+++ b/LESSONS/lesson12/lesson12_01.ipynb
@@ -68,6 +68,62 @@
     "else:\n",
     "    print('format wrong')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from re import Pattern,Match\n",
+    "def is_Ph_num(text:str)->bool:\n",
+    "    ph_num_regex:Pattern=re.compile(r'^\\d{4}-\\d{3}-\\d{3}$')\n",
+    "    result:Match=re.match(ph_num_regex,text)\n",
+    "    if result is None:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "Ph_num=input(\"Phone number:\")\n",
+    "if is_Ph_num(Ph_num):\n",
+    "    print(f'Your phone num is {Ph_num}')\n",
+    "else:\n",
+    "    print('format wrong')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your phone num is 0966_459_549\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from re import Pattern,Match\n",
+    "def is_Ph_num(text:str)->bool:\n",
+    "    ph_num_regex:Pattern=re.compile(r'^\\d{4}(-|_)\\d{3}(-|_)\\d{3}$')\n",
+    "    result:Match=re.match(ph_num_regex,text)\n",
+    "    if result is None:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "Ph_num=input(\"Phone number:\")\n",
+    "if is_Ph_num(Ph_num):\n",
+    "    print(f'Your phone num is {Ph_num}')\n",
+    "else:\n",
+    "    print('format wrong')"
+   ]
   }
  ],
  "metadata": {
