--- a/LESSONS/lesson12/lesson12_01.ipynb
+++ b/LESSONS/lesson12/lesson12_01.ipynb
@@ -124,6 +124,29 @@
     "else:\n",
     "    print('format wrong')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0911-111-111', '0922-222-222']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string='my phone num are 0911-111-111 and 0922-222-222'\n",
+    "ph_num_Regex:Pattern=re.compile(r'\\d{4}-\\d{3}-\\d{3}')\n",
+    "digits:list=re.findall(ph_num_Regex,string)\n",
+    "digits"
+   ]
   }
  ],
  "metadata": {
