--- a/LESSONS/lesson13/lesson13_0.ipynb
+++ b/LESSONS/lesson13/lesson13_0.ipynb
@@ -63,6 +63,105 @@
     "array3=array1+array2\n",
     "array3*10/2+1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.49906130e-310, 0.00000000e+000, 0.00000000e+000, 0.00000000e+000,\n",
+       "       6.74837101e-310, 8.01200449e+165, 1.16188862e+165, 5.25175929e-090,\n",
+       "       4.55998830e-037, 6.74841362e-310])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.empty((10,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5, 1. , 1.5, 2. , 2.5, 3. , 3.5, 4. , 4.5, 5. , 5.5, 6. , 6.5,\n",
+       "       7. , 7.5, 8. , 8.5, 9. , 9.5])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0.5,10,0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.        , -2.85714286, -2.71428571, -2.57142857, -2.42857143,\n",
+       "       -2.28571429, -2.14285714, -2.        , -1.85714286, -1.71428571,\n",
+       "       -1.57142857, -1.42857143, -1.28571429, -1.14285714, -1.        ,\n",
+       "       -0.85714286, -0.71428571, -0.57142857, -0.42857143, -0.28571429,\n",
+       "       -0.14285714,  0.        ,  0.14285714,  0.28571429,  0.42857143,\n",
+       "        0.57142857,  0.71428571,  0.85714286,  1.        ,  1.14285714,\n",
+       "        1.28571429,  1.42857143,  1.57142857,  1.71428571,  1.85714286,\n",
+       "        2.        ,  2.14285714,  2.28571429,  2.42857143,  2.57142857,\n",
+       "        2.71428571,  2.85714286,  3.        ,  3.14285714,  3.28571429,\n",
+       "        3.42857143,  3.57142857,  3.71428571,  3.85714286,  4.        ])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(-3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
