--- a/LESSONS/lesson14/lesson14_3.ipynb
+++ b/LESSONS/lesson14/lesson14_3.ipynb
@@ -146,6 +146,274 @@
     "axes.bar(s3.index,s3.values)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>縣市</th>\n",
+       "      <th>年份</th>\n",
+       "      <th>人口</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>台北</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>台北</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>台北</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>新竹</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>新竹</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>新竹</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   縣市    年份   人口\n",
+       "0  台北  2000  2.2\n",
+       "1  台北  2001  2.5\n",
+       "2  台北  2002  2.7\n",
+       "3  新竹  2001  1.1\n",
+       "4  新竹  2002  1.5\n",
+       "5  新竹  2003  2.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    '縣市': ['台北','台北','台北', '新竹', '新竹', '新竹'],\n",
+    "    '年份': [2000, 2001, 2002, 2001, 2002, 2003],\n",
+    "    '人口': [2.2, 2.5, 2.7, 1.1, 1.5, 2.0]\n",
+    "}\n",
+    "df1=pd.DataFrame(data)\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "縣市      台北\n",
+       "年份    2000\n",
+       "人口     2.2\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .iloc()得到橫\n",
+    "# [index]得到列\n",
+    "df1.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>縣市</th>\n",
+       "      <th>年份</th>\n",
+       "      <th>人口</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1Stop</th>\n",
+       "      <td>台北</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2Stop</th>\n",
+       "      <td>台北</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3Stop</th>\n",
+       "      <td>台北</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4Stop</th>\n",
+       "      <td>新竹</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5Stop</th>\n",
+       "      <td>新竹</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6Stop</th>\n",
+       "      <td>新竹</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       縣市    年份   人口\n",
+       "1Stop  台北  2000  2.2\n",
+       "2Stop  台北  2001  2.5\n",
+       "3Stop  台北  2002  2.7\n",
+       "4Stop  新竹  2001  1.1\n",
+       "5Stop  新竹  2002  1.5\n",
+       "6Stop  新竹  2003  2.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    '縣市': ['台北','台北','台北', '新竹', '新竹', '新竹'],\n",
+    "    '年份': [2000, 2001, 2002, 2001, 2002, 2003],\n",
+    "    '人口': [2.2, 2.5, 2.7, 1.1, 1.5, 2.0]\n",
+    "}\n",
+    "df2=pd.DataFrame(data,index=[f'{num}Stop'for num in range(1,7)])\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "縣市      台北\n",
+       "年份    2001\n",
+       "人口     2.5\n",
+       "Name: 2Stop, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.loc['2Stop']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1Stop    2000\n",
+       "2Stop    2001\n",
+       "3Stop    2002\n",
+       "4Stop    2001\n",
+       "5Stop    2002\n",
+       "6Stop    2003\n",
+       "Name: 年份, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['年份']"
+   ]
   }
  ],
  "metadata": {
