--- a/LESSONS/lesson10/lesson10_0.ipynb
+++ b/LESSONS/lesson10/lesson10_0.ipynb
@@ -2,29 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name:藍姿婷\n",
-      "Height:156\n",
-      "Weight:51\n",
-      "BMI:20.96\n",
-      "State:normal\n",
-      "-----------------------------\n",
-      "Name:楊易政\n",
-      "Height:154\n",
-      "Weight:66\n",
-      "BMI:27.83\n",
+      "Name:李立偉\n",
+      "Height:140\n",
+      "Weight:86\n",
+      "BMI:43.88\n",
       "State:tooo heavy\n",
       "-----------------------------\n",
-      "Name:柯宜臻\n",
-      "Height:166\n",
-      "Weight:82\n",
-      "BMI:29.76\n",
+      "Name:陳向愛\n",
+      "Height:157\n",
+      "Weight:80\n",
+      "BMI:32.46\n",
+      "State:tooo heavy\n",
+      "-----------------------------\n",
+      "Name:鄭琇亞\n",
+      "Height:172\n",
+      "Weight:94\n",
+      "BMI:31.77\n",
+      "State:tooo heavy\n",
+      "-----------------------------\n",
+      "Name:余宗儒\n",
+      "Height:144\n",
+      "Weight:80\n",
+      "BMI:38.58\n",
+      "State:tooo heavy\n",
+      "-----------------------------\n",
+      "Name:陳家維\n",
+      "Height:189\n",
+      "Weight:107\n",
+      "BMI:29.95\n",
       "State:tooo heavy\n",
       "-----------------------------\n"
      ]
